terminology/0.1.0/codeSystems.md
# Code Systems - HL7 Czech Terminology Implementation Guide v0.1.0

* [**Table of Contents**](toc.md)
* **Code Systems**

## Code Systems

### Code Systems

| | |
| :--- | :--- |
| [Absent a Unknown Data - IPS](CodeSystem-absent-unknown-uv-ips-cz.md) | Kódový systém pro označení nepřítomnosti nebo neznalosti údajů. Doplněk kódového systému hl7-IPS (International patient Summary). |
| [Administrative Gender (CZ supplement)](CodeSystem-administrative-gender-cz.md) | Pohlaví osoby používané pro administrativní účely. The gender of a person used for administrative purposes. |
| [Coverage SelfPay Codes (CZ supplement)](CodeSystem-coverage-selfpay-cz.md) | This code system supplements Coverage SelfPay. |
| [ATC CZ](CodeSystem-dlp-atc.md) | Czech national version of the Anatomical Therapeutical Chemical (ATC) code system. |
| [DLP formy](CodeSystem-dlp-formy.md) | Lékové formy dle DLP. |
| [Codesystem of DLP Lecive latky](CodeSystem-dlp-lecivelatky.md) | Codesystem of DLP Lecive latky. Identification ingredient. |
| [Codesystem of DLP Lecive pripravky](CodeSystem-dlp-lecivepripravky.md) | Codesystem of DLP Lecive pripravky. Identification medication. |
| [Type of healthcare facility](CodeSystem-drzar.md) | Czech national code system for type of healthcare facility. |
| [Codesystem of Health Insurance Companies](CodeSystem-healthInsuranceCompanyCode.md) | National codes of health insurance companies. |
| [NCLPMAT](CodeSystem-nclp-NCLPMAT.md) | NCLP - Číselník materiálů pro laboratoře. |
| [NRZP - Czech health professional occupation](CodeSystem-nrzp-povolani.md) | Czech national code system for health professional occupation used in the national registry of healthcare practicioners. |
| [Contact Role (CZ supplement)](CodeSystem-v2-0131-cz.md) | Role kontaktní osoby. FHIR Code system definition for HL7 v2 table 0131 (Contact Role). |
| [v3 Code System ActCode](CodeSystem-v3-ActCode-cz.md) | This code system supplements v3 ActCode. |
| [RoleCode (CZ Supplement)](CodeSystem-v3-RoleCode-cz.md) | Český doplněk kódového systému v3-RoleCode, který je souborem kódů blíže specifikujících druh Role; obsahuje specifické klasifikační kódy pro další upřesnění kódů RoleClass. A Czech supplement to the v3-RoleCode code system which is a set of codes further specifying the kind of Role; specific classification codes for further qualifying RoleClass codes. |

